--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ oauthlib==3.1.0
 olefile==0.46
 paramiko==2.7.2
 pathspec==0.9.0
+pbr==5.8.1
 pexpect==4.8.0
 Pillow==8.1.2
 platformdirs==2.4.1
@@ -102,6 +103,7 @@ six==1.16.0
 SQLAlchemy==1.3.22
 sqlparse==0.4.1
 systemd-python==234
+testresources==2.0.1
 texttable==1.6.3
 toml==0.10.2
 tomli==1.2.3
