--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
+apturl==0.5.2
 asgiref==3.4.1
 attrs==20.3.0
 Babel==2.9.1
 bcrypt==3.1.7
 blinker==1.4
+Brlapi==0.8.2
 cached-property==1.5.2
 cachetools==4.2.1
 certifi==2020.6.20
 cfgv==3.3.1
 chardet==4.0.0
 click==8.0.3
-
+colorama==0.4.4
 command-not-found==0.3
 cryptography==3.3.2
 cupshelpers==1.0
@@ -63,7 +65,6 @@ oauthlib==3.1.0
 olefile==0.46
 paramiko==2.7.2
 pathspec==0.9.0
-pbr==5.8.1
 pexpect==4.8.0
 Pillow==8.1.2
 platformdirs==2.4.1
@@ -101,7 +102,6 @@ six==1.16.0
 SQLAlchemy==1.3.22
 sqlparse==0.4.1
 systemd-python==234
-testresources==2.0.1
 texttable==1.6.3
 toml==0.10.2
 tomli==1.2.3
