--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,34 @@
-
+apturl==0.5.2
 asgiref==3.4.1
 attrs==20.3.0
 Babel==2.9.1
 bcrypt==3.1.7
 blinker==1.4
+Brlapi==0.8.2
 cached-property==1.5.2
 cachetools==4.2.1
 certifi==2020.6.20
 cfgv==3.3.1
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.3.2
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.4
+distro==1.5.0
+distro-info==1.0
 Django==3.2.6
 django-cors-headers==3.11.0
 django-crispy-forms==1.12.0
 django-extra-views==0.14.0
 django-money==2.0.1
 djangorestframework==3.13.1
-
+docker==4.4.4
+docker-compose==1.27.4
+dockerpty==0.4.1
 docopt==0.6.2
 duplicity==0.8.20
 fasteners==0.14.1
@@ -30,7 +44,7 @@ idna==2.10
 importlib-metadata==4.0.1
 jeepney==0.7.1
 jsonschema==3.2.0
-
+keyring==23.0.1
 language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
@@ -51,6 +65,7 @@ oauthlib==3.1.0
 olefile==0.46
 paramiko==2.7.2
 pathspec==0.9.0
+pbr==5.8.1
 pexpect==4.8.0
 Pillow==8.1.2
 platformdirs==2.4.1
@@ -88,6 +103,7 @@ six==1.16.0
 SQLAlchemy==1.3.22
 sqlparse==0.4.1
 systemd-python==234
+testresources==2.0.1
 texttable==1.6.3
 toml==0.10.2
 tomli==1.2.3
@@ -103,3 +119,6 @@ virtualenv==20.13.0
 wadllib==1.3.5
 websocket-client==0.57.0
 whitenoise==5.3.0
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
